# qwen3-tts.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: compare_e2e.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  download_and_convert_all.sh
src/: audio_codec_encoder.cpp  audio_codec_encoder.h  audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  gguf_loader.cpp  main.cpp  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  server.cpp  text_tokenizer.cpp  text_tokenizer.h  tokenizer_unicode.cpp  tts_transformer.cpp  tts_transformer.h
tests/: test_encoder.cpp  test_icl_dump.cpp
